[package]
name = "chusst-uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chusst-gen = { path = "../chusst-gen", features = ["bitboards"]}
async-std = "1.12.0"
rust-fsm = "0.6.1"
crossbeam-channel = "0.5.8"
