[package]
name = "pgn2yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chusst-gen = { path = "../chusst-gen" }
anyhow = "1.0.77"
clap = { version = "4.4.12", features = ["derive"] }
nom = "7.1.3"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.29"
