[package]
name = "chusst"
version = "0.10.0"
description = "A simple chess engine in Rust"
authors = ["Oriol Arcas"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
chusst-gen = { path = "../chusst-gen" }
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["bitboards"]

# Use bitboards to evaluate valid moves
bitboards = ["chusst-gen/bitboards"]
# Use a memory-efficient representation of the board (1 byte per square)
compact-board = ["chusst-gen/compact-board"]

# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
